# disputationes

./: .gitignore  LICENSE  Makefile  README.md  about.markdown  about.md  build.sh  deploy.sh  disputationes.cabal  favicon.xcf  index.html  preview.sh  push.sh  site.hs  stack.yaml
.stack-work/install/x86_64-linux-nopie/lts-9.4/8.0.2/flag-cache/: Cabal-1.24.2.0-sW0oj6LDIlHBZFAevgaHp  HTTP-4000.3.7-Bu9PMQgKGbz9hGhVg4fSEv  JuicyPixels-3.2.8.3-5IOlo1rE8WxAfqhWPTAe4N  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  SHA-1.6.4.2-6ZuKopcglGG4yoCGsd9koJ  (+143 more)
css/: default.css  default.sass  media.sass  mobile.css  theatre.css  theatre.sass
drafts/: 2015-12-27-arminius-and-flavus.markdown  2016-05-12-the-trumpiad-book-1.markdown  2016-09-24-de-petitione-donaldi-trump.markdown  2018-02-19-beyond-the-fetishization-of-firearms.md  2018-04-27-reconsidering-incel-attacks.md
oldposts/: 2014-03-09-carmen-harenosum.markdown  2014-04-22-the-old-master-of-the-desert.markdown
posts/: 2014-03-09-carmen-harenosum.markdown  2014-04-22-the-old-master-of-the-desert.markdown  2015-02-27-ad-zevum.markdown  2015-12-07-horace-on-immortality.markdown  2015-12-11-farewell-to-the-city-of-lyon.markdown  2015-12-18-tuileries.markdown  2016-01-14-math-jokes.markdown  2016-05-12-the-trumpiad-book-1.markdown  2016-11-03-moellendorff-manchu.md  2016-11-17-some-words-on-politics.md  2017-10-31-spring-in-catalonia.md  2018-03-01-from-yu-the-great.md  2018-04-25-david-buckel.md  2018-05-03-on-comets-and-revolutions.md
scripts/: deploy.sh  preview.sh
templates/: archive.html  default.html  post.html  tags.html
(+8 files in other folders)
