name:               disputationes
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.20

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , blaze-html == 0.9.*
                  , hakyll-sass
                  , blaze-markup
  ghc-options:      -threaded
  default-language: Haskell2010
